--- a/index.html
+++ b/index.html
@@ -15,20 +15,21 @@
 <body>
 
 <button id="startBtn">載入 CCTV</button>
-<input type="text" id="search" placeholder="搜尋編號或名稱"/>
+<input type="text" id="search" placeholder="搜尋編號或名稱" />
 <button onclick="searchCCTV()">搜尋</button>
 
 <div id="grid" class="grid"></div>
 <div id="pagination" class="pagination"></div>
 
+<!-- 點按鈕後，呼叫 app.js 裡的 init() -->
 <script>
- 
   document.getElementById('startBtn').onclick = function(){
     this.style.display = 'none';
     init();
   };
 </script>
+
+<!-- 載入 app.js，內含 init / lazy loading / refresh / 分頁 -->
 <script src="app.js"></script>
 </body>
 </html>
-
