--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 <body>
 
 <button id="startBtn">載入 CCTV</button>
-<input type="text" id="search" placeholder="搜尋編號或名稱" />
+<input type="text" id="search" placeholder="搜尋編號或名稱"/>
 <button onclick="searchCCTV()">搜尋</button>
 
 <div id="grid" class="grid"></div>
 <div id="pagination" class="pagination"></div>
 
-<!-- 點按鈕後，呼叫 app.js 裡的 init() -->
+<!-- ⬇️ 按鈕在這裡綁定 init()；此時 app.js 尚未載入，因此不會執行 -->
 <script>
-  document.getElementById('startBtn').onclick = function(){
+  document.getElementById('startBtn').onclick = function() {
     this.style.display = 'none';
-    init();
-  };
+    init();   // ← init() 定義在 app.js 裡
+  }
 </script>
 
-<!-- 載入 app.js，內含 init / lazy loading / refresh / 分頁 -->
+<!-- ⬇️ app.js 必須放在頁面最底部 -->
 <script src="app.js"></script>
 </body>
 </html>
