--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     .pagination a { margin: 0 4px; text-decoration: none; color: #007bff; }
     .pagination .active { font-weight: bold; text-decoration: underline; }
 
-    /* 編號列表 span 水平排列 */
-    #cctvList span {
-      display:inline-block;
-      margin-right:16px;
-      margin-bottom:8px;
+    /* 列表（表格）樣式 */
+    #cctvTable td {
+      padding:4px 12px;
+      white-space:nowrap;
+      border:1px solid #ddd;
     }
   </style>
 </head>
@@ -28,13 +28,9 @@
 <div id="grid" class="grid"></div>
 <div id="pagination" class="pagination"></div>
 
+<!-- 列表展開按鈕 -->
 <button id="toggleListBtn">📋 台北市CCTV編號列表</button>
 <div id="cctvList" style="display:none; margin-top:12px;"></div>
-#cctvTable td {
-  padding: 4px 12px;
-  white-space: nowrap;
-  border: 1px solid #ddd;
-}
 
 <script>
 // ▼ 點「載入 CCTV」→ 載入 json + render 畫面
@@ -43,17 +39,16 @@ document.getElementById('startBtn').onclick = function(){
   this.style.display = 'none';
 };
 
-// ▼ 點「編號列表」→ 如果 cctvData 為空 → 只 fetch json → 再展開『純文字清單』
+// ▼ 點「編號列表」→ 若 cctvData 為空 → 只 fetch json → 顯示表格
 document.getElementById('toggleListBtn').onclick = function(){
   const div = document.getElementById('cctvList');
 
-  // 尚未取得資料 → 只讀取 json
   if (cctvData.length === 0) {
     fetch('cctv.json')
       .then(r => r.json())
       .then(data => {
         cctvData = data;
-        div.innerHTML = cctvData.map(d => `<span>${d.id} ${d.name}</span>`).join('');
+        renderCCTVList();  // ← 產生表格
         div.style.display = 'block';
       });
     return;
@@ -61,7 +56,7 @@ document.getElementById('toggleListBtn').onclick = function(){
 
   // 已經有資料 → 正常收合/展開
   if(div.style.display === 'none'){
-    div.innerHTML = cctvData.map(d => `<span>${d.id} ${d.name}</span>`).join('');
+    renderCCTVList();
     div.style.display = 'block';
   } else {
     div.style.display = 'none';
@@ -72,4 +67,3 @@ document.getElementById('toggleListBtn').onclick = function(){
 <script src="app.js"></script>
 </body>
 </html>
-
