--- a/index.html
+++ b/index.html
@@ -1,33 +1,47 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
 <head>
-  <meta charset="utf-8"/>
-  <title>自選監看清單</title>
+  <meta charset="utf-8" />
+  <title>Taipei CCTV Dashboard</title>
   <style>
     .grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 12px; }
+    .cctv-item { text-align: center; }
     iframe { width: 100%; height: 240px; border: none; }
+    .pagination { margin: 14px 0; text-align: center; }
+    .pagination a { margin: 0 4px; text-decoration: none; color: #007bff; }
+    .pagination .active { font-weight: bold; text-decoration: underline; }
+    #cctvTable td {
+      padding:4px 12px;
+      white-space:nowrap;
+      border:1px solid #ddd;
+    }
   </style>
 </head>
 <body>
 
-<h1>自選監看清單</h1>
-<div class="grid" id="customGrid"></div>
+<h1>台北市CCTV監控板</h1>
 
-<script>
-// 讀取 querystring 中的 codes
-const params = new URLSearchParams(window.location.search);
-const codes  = params.get('codes')?.split(',') || [];
+<button id="startBtn">載入 CCTV</button>
+<input type="text" id="search" placeholder="搜尋編號或名稱"/>
+<button onclick="searchCCTV()">搜尋</button>
 
-const container = document.getElementById('customGrid');
-codes.forEach(id => {
-  const div = document.createElement('div');
-  div.innerHTML = `
-     <h3>${id}</h3>
-     <iframe src="https://hls.bote.gov.taipei/live/index.html?id=${id}" allowfullscreen></iframe>
-  `;
-  container.appendChild(div);
-});
-</script>
+<div id="grid" class="grid"></div>
+<div id="pagination" class="pagination"></div>
 
+<!-- 🔽 自選清單輸入區 -->
+<hr>
+<label>輸入 CCTV 編號：</label>
+<input type="text" id="inputCode">
+<button id="addToListBtn">＋加入</button>
+<br>
+<div id="selectedList" style="margin:5px 0"></div>
+<button id="startCustomBtn" disabled>開始監看</button>
+<hr>
+
+<!-- 🔽 編號總表 -->
+<button id="toggleListBtn">📋 台北市CCTV編號列表</button>
+<div id="cctvList" style="display:none; margin-top:12px;"></div>
+
+<script src="app.js"></script>
 </body>
 </html>
