--- a/index.html
+++ b/index.html
@@ -10,24 +10,57 @@
     .pagination { margin: 14px 0; text-align: center; }
     .pagination a { margin: 0 4px; text-decoration: none; color: #007bff; }
     .pagination .active { font-weight: bold; text-decoration: underline; }
+
     #cctvTable td { padding:4px 12px; white-space:nowrap; border:1px solid #ddd; }
-    /* 標題與搜尋並排 */
+
+    /* 標題置中；右側放搜尋 */
     .header-row{ display:flex; justify-content: space-between; align-items:flex-end; }
+    .header-title{ flex:1; text-align:center; font-size:32px; font-weight:bold; }
+
+    /* --- Drawer (底部列表) --- */
+    #listDrawer {
+      position:fixed;
+      left:0;
+      right:0;
+      bottom:-300px;
+      height:300px;
+      background:#fff;
+      border-top:1px solid #ccc;
+      overflow:auto;
+      transition: bottom 0.3s;
+      padding:12px;
+      z-index:11;
+    }
+    #drawerClose{
+      position:absolute;
+      right:8px;
+      top:8px;
+      cursor:pointer;
+      font-weight:bold;
+    }
+    /* 半透明背景 */
+    #overlay {
+      position:fixed;
+      left:0; top:0; right:0; bottom:0;
+      background:rgba(0,0,0,0.4);
+      display:none;
+      z-index:10;
+    }
   </style>
 </head>
 <body>
 
-<!-- 🔽 標題 + 搜尋欄位（並排） -->
+<!-- header -->
 <div class="header-row">
-  <h1>台北市CCTV監控板</h1>
+  <div class="header-title">🎥 台北市CCTV監控板</div>
   <div>
     <input type="text" id="search" placeholder="搜尋編號或名稱"/>
     <button onclick="window.searchCCTV()">搜尋</button>
   </div>
 </div>
 
-<!-- 🔽 自訂清單放在標題下方 -->
 <hr/>
+
 <strong>🟡 自訂監看清單</strong><br/>
 <label for="inputCode">輸入 CCTV 編號：</label>
 <input type="text" id="inputCode"/>
@@ -37,14 +70,46 @@
 
 <hr/>
 
-<button onclick="window.renderCCTVList()">📋 台北市CCTV編號列表</button>
-<div id="cctvList" style="display:none; margin-top:12px;"></div>
+<button id="toggleListBtn">📋 台北市CCTV編號列表</button>
+
+<!-- 半透明遮罩 -->
+<div id="overlay"></div>
+
+<!-- 底部 Drawer -->
+<div id="listDrawer">
+  <span id="drawerClose">❌</span>
+  <div id="drawerContent"></div>
+</div>
 
 <div id="grid" class="grid"></div>
 <div id="pagination" class="pagination"></div>
 
-<!-- ✅ 先載入 app.js，之後再執行 init() -->
 <script src="app.js"></script>
-<script>init();</script>
+<script>
+/* 載入 JSON */
+init();
+
+/* Drawer & Overlay */
+let listOpen  = false;
+const drawer  = document.getElementById('listDrawer');
+const overlay = document.getElementById('overlay');
+const drawerContent = document.getElementById('drawerContent');
+const closeBtn = document.getElementById('drawerClose');
+
+// 展開 or 收合
+document.getElementById('toggleListBtn').onclick = toggleDrawer;
+closeBtn.onclick  = toggleDrawer;
+overlay.onclick   = toggleDrawer;
+
+function toggleDrawer(){
+  if(!listOpen && drawerContent.innerHTML === ''){
+    // 初次展開 → 產生內容
+    drawerContent.innerHTML = cctvData.map(d => `<div>${d.id} ${d.name}</div>`).join('');
+  }
+  listOpen = !listOpen;
+  drawer.style.bottom   = listOpen ? '0px' : '-300px';
+  overlay.style.display = listOpen ? 'block' : 'none';
+}
+</script>
 </body>
 </html>
